[gd_scene load_steps=12 format=3 uid="uid://jmo7fkfdh33y"]

[ext_resource type="Script" path="res://HUD.gd" id="1_wqd24"]
[ext_resource type="PackedScene" uid="uid://bo0mmw6euyv7i" path="res://weapon_hud.tscn" id="2_bo5pj"]
[ext_resource type="Texture2D" uid="uid://be7nihnlk5t63" path="res://art/health-normal.svg" id="2_otavy"]
[ext_resource type="Texture2D" uid="uid://cujb8rykjjemq" path="res://art/rifle_ui.png" id="3_3hewy"]
[ext_resource type="Texture2D" uid="uid://btuumitgbrrnp" path="res://art/pistol_ui.png" id="3_ffv8t"]
[ext_resource type="Shader" path="res://pistol_hud.gdshader" id="5_fyned"]
[ext_resource type="Shader" path="res://rifle_hud.gdshader" id="6_1xaxf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvsb6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtfvq"]
bg_color = Color(0, 0.823529, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5emas"]
shader = ExtResource("5_fyned")
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kdpmq"]
shader = ExtResource("6_1xaxf")
shader_parameter/disabled = false

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqd24")

[node name="health_bar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 20.0
offset_right = 460.0
offset_bottom = 52.0
theme_override_styles/background = SubResource("StyleBoxFlat_jvsb6")
theme_override_styles/fill = SubResource("StyleBoxFlat_xtfvq")
value = 50.0
show_percentage = false

[node name="health_icon" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 52.0
offset_bottom = 52.0
texture = ExtResource("2_otavy")
expand_mode = 1

[node name="health_label" type="Label" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 18.0
offset_right = 510.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 24
text = "50
"

[node name="timer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -43.0
offset_right = 60.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "2:00"

[node name="pistol_hud" parent="." instance=ExtResource("2_bo5pj")]
layout_mode = 1
offset_left = 20.0
offset_top = 64.0
offset_right = -932.0
offset_bottom = -464.0
weapon_tex = ExtResource("3_ffv8t")
new_material = SubResource("ShaderMaterial_5emas")

[node name="rifle_hud" parent="." instance=ExtResource("2_bo5pj")]
layout_mode = 1
offset_left = 220.0
offset_top = 64.0
offset_right = -732.0
offset_bottom = -464.0
weapon_tex = ExtResource("3_3hewy")
new_material = SubResource("ShaderMaterial_kdpmq")
